--- a/Styles/extra_styles.css
+++ b/Styles/extra_styles.css
@@ -36,3 +36,39 @@
   padding-top: 10px;
   padding-bottom: 10px;
 }
+
+/*Answer buttons*/
+
+.button {
+    border: none;
+    border-radius: 8pt;
+    padding: 8pt;
+    width: 50%;
+    min-width: 500pt;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    font-size: 15pt;
+    margin: -2px auto;
+    cursor: pointer;
+}
+.small_button, .small_button_off {
+    border: none;
+    border-radius: 8pt;
+    padding: 8pt;
+    width: 10%;
+    min-width: 100pt;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    font-size: 12pt;
+    margin: -2px auto;
+    cursor: pointer;
+}
+.small_button_off {
+    background-color: #ddd;
+    color: #888;
+    border: 2px solid #888;
+    cursor: not-allowed;
+    margin: -4px auto;
+}
